--- a/travelbox/templates/travelbox/travelbox.html
+++ b/travelbox/templates/travelbox/travelbox.html
@@ -19,7 +19,7 @@
     </form>
 
     <p>============================================</p>
-    
+    {% if travelbox.place_name %}
     <p>{{Travel_box.place_name}}</p>
     {% endif %}
     {% if travelbox.traffic %}
