이미지 업도로 성공, 이비미 업데이트 부분 실패

--- a/travelbox/templates/travelbox/box_create.html
+++ b/travelbox/templates/travelbox/box_create.html
@@ -17,6 +17,9 @@
      음식: <input type="text" name="food"><br>
      경치: <input type="text" name="sightseeing"><br>
      액티비티: <input type="text" name="activity"><br>
+     <div>
+        <input type="file" name="image">
+    </div>
    
      
      <input type="submit" value="submit">
