--- a/travelbox/templates/travelbox/read_box.html
+++ b/travelbox/templates/travelbox/read_box.html
@@ -10,7 +10,7 @@
     <h1>{{post.id}}</h1>
     {% if post.image %}
     <div style="width: 250px;">
-        <img src="{{ post.head_image.url }}" alt="post image" style="width: 100%;">
+        <img src="{{ post.image.url }}" alt="post image" style="width: 100%;">
     </div>
     {% endif %}
 
