--- a/travelbox/templates/travelbox/mybox.html
+++ b/travelbox/templates/travelbox/mybox.html
@@ -5,13 +5,9 @@
   <meta charset="UTF-8">
   <title>My Travel Box</title>
   <link rel="stylesheet" href="{% static 'css/travel_box.css' %}">
-  <!-- <link rel="stylesheet" href="{% static 'js/mybox.js' %}"> -->
   <script src="//code.jquery.com/jquery-3.3.1.min.js"></script> 
   <script src="{% static 'js/mybox.js' %}"></script> 
-  <!-- ============================================== 임시-->
-  
-  
-  <!-- ============================================== -->
+  <!-- 쿼리가 js보다 앞에 배치해야함 -->
   
 </head>
 <body>
@@ -79,45 +75,6 @@
   <footer>
       <p>Copyright SUPME rights reserved.</p>
   </footer>
-<!-- ===================================================== -->
-  <!-- <script>
-   $(function (){
-	$("#btn_toggle").click(function (){
-  	$("#Toggle").toggle();
-  });
-});
 
-$(function (){
-	$("#btn_toggle1").click(function (){
-  	$("#Toggle1").toggle();
-  });
-});
-
-$(function (){
-	$("#btn_toggle2").click(function (){
-  	$("#Toggle2").toggle();
-  });
-});
-
-$(function (){
-	$("#btn_toggle3").click(function (){
-  	$("#Toggle3").toggle();
-  });
-});
-
-$(function (){
-	$("#btn_toggle4").click(function (){
-  	$("#Toggle4").toggle();
-  });
-});
-
-$(function (){
-	$("#btn_toggle5").click(function (){
-  	$("#Toggle5").toggle();
-  });
-});
-
-  </script> -->
-  <!-- ===================================================== -->
 </body>
 </html>
