제출할 이미지 모델 생성, mybox => userpic 전송 문제

--- a/travelbox/templates/travelbox/box_update.html
+++ b/travelbox/templates/travelbox/box_update.html
@@ -15,9 +15,9 @@
     음식: <input type="text" name="food" value="{{post.food}}"><br>
     경치: <input type="text" name="sightseeing" value="{{post.sightseeing}}"><br>
     액티비티: <input type="text" name="activity" value="{{post.activity}}"><br>
-    <div>
+    <!-- <div>
         <input type="file" name="image">
-    </div>
+    </div> -->
     <input type="submit" value="submit">
    </form>
 
