--- a/travelbox/templates/travelbox/read_box.html
+++ b/travelbox/templates/travelbox/read_box.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>{{post.id}}</h1>
-    {% if post.image %}
+    {% if post.image_1 %}
     <div style="width: 250px;">
-        <img src="{{ post.image.url }}" alt="post image" style="width: 100%;">
+        <img src="{{ post.image_1.url }}" alt="post image_1" style="width: 100%;">
     </div>
     {% endif %}
 
@@ -20,6 +20,18 @@
     <p>{{post.food}}</p>
     <p>{{post.activity}}</p>
     <p>{{post.sightseeing}}</p>
+
+    {% if post.image_2 %}
+    <div style="width: 250px;">
+        <img src="{{ post.image_2.url }}" alt="post image_2" style="width: 100%;">
+    </div>
+    {% endif %}
+
+    {% if post.image_3 %}
+    <div style="width: 250px;">
+        <img src="{{ post.image_3.url }}" alt="post image_3" style="width: 100%;">
+    </div>
+    {% endif %}
     
     <div>
         <a href="{% url 'travelbox:box_update' post.id %}" style="width: 300px">Edit</a>
