--- a/travelbox/templates/travelbox/box_create.html
+++ b/travelbox/templates/travelbox/box_create.html
@@ -43,11 +43,13 @@
       음식: <input type="text" name="food"><br>
       경치: <input type="text" name="sightseeing"><br>
       액티비티: <input type="text" name="activity"><br>
-     
+      <br><br>
      <div>
-        <input type="file" name="image">
+        <input type="file" name="image_1"><br>
+        <input type="file" name="image_2"><br>
+        <input type="file" name="image_3"><br>
      </div>
-   
+     <br><br>
      
      <input type="submit" value="submit">
     </form>
