--- a/travelbox/templates/travelbox/read_box.html
+++ b/travelbox/templates/travelbox/read_box.html
@@ -45,5 +45,10 @@
     <div>
     <a href="{% url 'travelbox:mybox' post.id%}">My Box</a>
     </div>
+    <!-- 임시===== -->
+    <div>
+    <a href="{% url 'travelbox:test' post.id%}">My Box_test</a>
+    </div>
+     <!-- 임시===== -->
     </body>
 </html>
