대표사진 부제목 설명 추가 -> 해당 html수정 완료

--- a/travelbox/templates/travelbox/box_create.html
+++ b/travelbox/templates/travelbox/box_create.html
@@ -43,11 +43,17 @@
       음식: <input type="text" name="food"><br>
       경치: <input type="text" name="sightseeing"><br>
       액티비티: <input type="text" name="activity"><br>
+      부제목: <input type="text" name="sub_title"><br>
+      설명: <input type="text" name="script"><br>
       <br><br>
+
+
+
      <div>
-        <input type="file" name="image_1"><br>
-        <input type="file" name="image_2"><br>
-        <input type="file" name="image_3"><br>
+        지역사진   <input type="file" name="image_head"><br>
+        미션사진_1 <input type="file" name="image_1"><br>
+        미션사진_2 <input type="file" name="image_2"><br>
+        미션사진_3 <input type="file" name="image_3"><br>
      </div>
      <br><br>
      
