--- a/travelbox/templates/travelbox/box_update.html
+++ b/travelbox/templates/travelbox/box_update.html
@@ -15,28 +15,38 @@
     음식: <input type="text" name="food" value="{{post.food}}"><br>
     경치: <input type="text" name="sightseeing" value="{{post.sightseeing}}"><br>
     액티비티: <input type="text" name="activity" value="{{post.activity}}"><br>
+    부제목: <input type="text" name="sub_title" value="{{post.sub_title}}"><br>
+    설명: <input type="text" name="script" value="{{post.script}}"><br><br><br>
     <div>
+        {% if post.image_head %}
+                <div style="width: 250px;">
+                    대표 사진<img src="{{ post.image_head.url }}" alt="post image_head" style="width: 100%;">
+                    <input type="file" name="image_head" id="post-edit"><br>
+                </div>
+        {% endif %}
+        <br>
         {% if post.image_1 %}
                 <div style="width: 250px;">
-                    이미지1<img src="{{ post.image_1.url }}" alt="post image_1" style="width: 100%;">
+                    미션사진_1<img src="{{ post.image_1.url }}" alt="post image_1" style="width: 100%;">
                     <input type="file" name="image_1" id="post-edit"><br>
                 </div>
         {% endif %}
+        <br>
         {% if post.image_2 %}
                 <div style="width: 250px;">
-                    이미지2<img src="{{ post.image_2.url }}" alt="post image_2" style="width: 100%;">
+                    미션사진_2<img src="{{ post.image_2.url }}" alt="post image_2" style="width: 100%;">
                     <input type="file" name="image_2" id="post-edit"><br>
                 </div>
         {% endif %}
+        <br>
         {% if post.image_3 %}
                 <div style="width: 250px;">
-                    이미지3<img src="{{ post.image_3.url }}" alt="post image_3" style="width: 100%;">
+                    미션사진_3<img src="{{ post.image_3.url }}" alt="post image_3" style="width: 100%;">
                     <input type="file" name="image_3" id="post-edit"><br>
                 </div>
         {% endif %}
        
-        <!-- 이미지2<input type="file" name="image_2"><br>
-        이미지3<input type="file" name="image_3"><br> -->
+        
     </div>
     <input type="submit" value="submit" onclick="alert('업데이트 완료')">
    </form>
