양식 체인지

--- a/travelbox/templates/travelbox/read_box.html
+++ b/travelbox/templates/travelbox/read_box.html
@@ -58,5 +58,10 @@
     <a href="{% url 'travelbox:test' post.id%}">My Box_test</a>
     </div>
      <!-- 임시===== -->
+     <div>
+        <a href="{% url 'travelbox:test2' post.id%}">My Box_test2</a>
+        </div>
+    
+    
     </body>
 </html>
