checkbox 다시 설해야함, 각각  이미지 업로드 완성

--- a/travelbox/templates/travelbox/box_create.html
+++ b/travelbox/templates/travelbox/box_create.html
@@ -40,9 +40,13 @@
       </select>
       <br><br>
       숙소: <input type="text" name="accomdation"><br>
+      숙소_이미지: <input type="file" name="image_accomdation"><br>
       음식: <input type="text" name="food"><br>
+      음식_이미지: <input type="file" name="image_food"><br>
       경치: <input type="text" name="sightseeing"><br>
+      경치_이미지: <input type="file" name="image_sightseeing"><br>
       액티비티: <input type="text" name="activity"><br>
+      액티비티_이미지: <input type="file" name="image_activity"><br>
       부제목: <input type="text" name="sub_title"><br>
       설명: <input type="text" name="script"><br>
       <br><br>
