--- a/mypage/templates/mypage/signup.html
+++ b/mypage/templates/mypage/signup.html
@@ -43,7 +43,7 @@
                     </h2>
                     <br>
                     <div class="profil-contents" >
-                        <form action="{% url 'landing:signup' %}" id="post-create" method="POST" enctype="multipart/form-data">
+                        <form action="{% url 'mypage:signup' %}" id="post-create" method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
                             <span class="subheading mb-5">이름: <input type="text" name="name" value="이름"></span><br>
                             <span class="subheading mb-5">캐릭터: <input type="text" name="nickname" value="캐릭터"></span><br>
