social network tag

--- a/mypage/templates/mypage/contact.html
+++ b/mypage/templates/mypage/contact.html
@@ -36,7 +36,7 @@
         <section class="py-5">
             <div class="container px-5">
                 <!-- Contact form-->
-                <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
+                <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5" style="opacity:0.9;">
                     <div class="text-center mb-5">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
                         <h2 class="fw-bolder">서프미와 소통하기</h2>
@@ -74,7 +74,7 @@
                         
                                 <!-- Submit Button-->
                                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                    <button class="btn btn-primary me-md-2" ><a href="/mypage/profile/" style="color:white; text-decoration:none;">보내기</a></button>
+                                    <a  class="btn btn-primary me-md-2"href="/mypage/profile/" style="color:white; text-decoration:none;">보내기</a>
                                 </div>
                             </form>
                         </div>
